module.exports = class Goal {
  constructor(action, dailyHours) {
    this.goal = action
    this.dailyHours = dailyHours
  }
}
