@startuml NoCrastinate

skinparam Shadowing false
skinparam Monochrome true
' skinparam PackageFontStyle Rectangle

class User  {
    name: String
    age: Number
    occupation: string
    location: string
    bio: string
    goals: [Goal]

    activeActionRecord: ActionRecord
    possibleActions: [Action]
    actionRecords: [ActionRecord]

    createAction(actionName)
    startAction(action)
    stopAction(action)

}

class Action {
    name: String
}

class ActionRecord {
    action: Action
    startTime: Date
    stopTime: Date
    inProgress: Boolean
    productiveTime: Number

    calculateProductiveTime(stopTime)
}
class Goal {
    goal: Action
    dailyHours: Number
}

class GoalManager{
    checkForAchievements(goal,actionRecord)
}

User "1" o-> "0...*" Action : Creates..
User ---> Action: Start/stop
User *-> ActionRecord

Action <-- ActionRecord : keeps an Action


User *----> Goal : Defines
GoalManager -> ActionRecord
GoalManager -> Goal


@enduml